kubernetes/apps/kubeflow/notebooks/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: notebooks
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - kubeflow.goyangi.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /jupyter
      backendRefs:
        - name: notebooks-jupyter-web-app
          port: 5000
